--- a/index.html
+++ b/index.html
@@ -4,141 +4,151 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Uber Albalad</title>
+
   <style>
     :root{
       --yellow:#ffd400;
       --black:#0b0b0b;
       --card:#ffffff;
       --muted:#777;
-      --shadow: 0 6px 18px rgba(10,10,10,0.08);
+      --shadow:0 6px 18px rgba(10,10,10,0.08);
       --radius:14px;
       --gap:24px;
     }
-    html,body{height:100%;margin:0;font-family: 'Segoe UI', Tahoma, sans-serif;background:#f4f4f4;color:#111}
-    
-    /* ======================= الشريط العلوي ======================= */
+
+    body{
+      margin:0;
+      background:#f4f4f4;
+      font-family:'Segoe UI', Tahoma;
+      color:#111;
+    }
+
+    /* الشريط العلوي */
     .topbar{
       background:var(--yellow);
-      color:var(--black);
       padding:14px 20px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
+      text-align:center;
       position:sticky;
       top:0;
-      z-index:40;
-      box-shadow:0 2px 6px rgba(0,0,0,0.06)
-    }
-    .topbar .title{
+      z-index:20;
       font-weight:700;
-      font-size:20px
+      font-size:20px;
     }
-    .topbar .adminBtn{
+    .adminBtn{
       position:absolute;
       right:20px;
-      background:transparent;
-      border:2px solid rgba(0,0,0,0.08);
+      top:10px;
       padding:8px 12px;
       border-radius:8px;
+      background:#fff;
+      border:1px solid #ddd;
       cursor:pointer;
-      font-weight:600
+      font-weight:600;
     }
-    .topbar .adminBtn:hover{
-      box-shadow:var(--shadow)
-    }
-    
-    /* ======================= المخطط العام ======================= */
+
+    /* تخطيط الصفحة */
     .wrap{
       max-width:1200px;
-      margin:28px auto;
-      padding:0 18px;
+      margin:25px auto;
+      padding:0 14px;
       display:grid;
-      grid-template-columns:1fr 340px;
-      gap:var(--gap)
+      grid-template-columns:70% 30%; /* طلبات 70% */
+      gap:var(--gap);
     }
 
-    /* ======================= الطلبات ======================= */
+    /* الطلبات */
     .ordersCard{
-      background:var(--card);
-      padding:22px;
+      background:#fff;
       border-radius:var(--radius);
-      box-shadow:var(--shadow)
+      padding:18px;
+      box-shadow:var(--shadow);
     }
-    .ordersCard h2{margin:0 0 12px 0;font-size:20px}
-    .ordersList{min-height:160px;display:flex;flex-direction:column;gap:14px}
-    .emptyNotice{color:var(--muted);padding:40px 0;text-align:center;font-size:16px}
-
+    .ordersList{
+      display:flex;
+      flex-direction:column;
+      gap:12px;
+      margin-top:10px;
+    }
     .orderCard{
-      display:flex;gap:14px;align-items:center;
+      background:#fff;
       padding:12px;
       border-radius:12px;
-      border:1px solid #f0f0f0;
-      background:#fff
+      display:flex;
+      gap:12px;
+      border:1px solid #eee;
     }
     .orderCard img{
-      width:120px;height:80px;object-fit:cover;
-      border-radius:8px;border:1px solid #eee
+      width:120px;
+      height:80px;
+      object-fit:cover;
+      border-radius:8px;
     }
-    .orderMeta{flex:1}
-    .orderMeta h4{margin:0 0 6px 0}
-    .orderMeta p{margin:0;color:var(--muted);font-size:13px}
-    .orderActions{display:flex;gap:8px}
+    .orderMeta{
+      flex:1;
+    }
 
-    /* ======================= لوحة المشرف ======================= */
+    /* لوحة المشرف */
     .adminCard{
-      background:var(--card);
-      padding:22px;
+      background:#fff;
       border-radius:var(--radius);
+      padding:18px;
       box-shadow:var(--shadow);
       display:none;
       flex-direction:column;
-      gap:12px
+      gap:12px;
     }
-    .adminCard.active{display:flex}
-    .adminCard h3{margin:0;font-size:18px}
-    .adminInfo{color:var(--muted);font-size:14px}
-    .adminActions{display:flex;flex-direction:column;gap:10px;margin-top:8px}
+    .adminCard.active{
+      display:flex;
+    }
 
-    /* ======================= أزرار ======================= */
-    .btn{padding:10px 14px;border-radius:10px;border:none;cursor:pointer;font-weight:600}
-    .btn-primary{background:#ffd400;color:#000}
-    .btn-secondary{background:#f1f1f1;color:#333;border:1px solid #e0e0e0}
-    .btn-danger{background:#e34b3b;color:#fff}
+    /* أزرار */
+    .btn{
+      padding:10px 14px;
+      border-radius:10px;
+      border:none;
+      cursor:pointer;
+      font-weight:600;
+    }
+    .btn-primary{ background:#ffd400; color:#000; }
+    .btn-secondary{ background:#eee; }
+    .btn-danger{ background:#e03939; color:#fff; }
 
-    /* ======================= نافذة المودال ======================= */
+    /* النافذة */
     .modal{
       position:fixed;
       inset:0;
+      background:rgba(0,0,0,.4);
       display:none;
       align-items:center;
       justify-content:center;
-      background:rgba(0,0,0,0.4);
-      z-index:60
+      z-index:40;
     }
-    .modal.show{display:flex}
+    .modal.show{
+      display:flex;
+    }
     .modalBox{
-      background:#fff;padding:18px;border-radius:12px;
-      max-width:520px;width:94%;box-shadow:var(--shadow)
+      background:#fff;
+      padding:18px;
+      border-radius:12px;
+      width:92%;
+      max-width:450px;
     }
-    .field{margin-bottom:10px}
-    .field input{width:100%;padding:10px;border-radius:8px;border:1px solid #e6e6e6}
-
-    /* ======================= ريسبونسف ======================= */
-    @media(max-width:880px){
-      .wrap{grid-template-columns:1fr;}
-      .topbar .adminBtn{position:static;margin-left:auto}
+    input{
+      width:100%;
+      padding:10px;
+      margin-top:6px;
+      border:1px solid #ddd;
+      border-radius:8px;
     }
   </style>
 </head>
 <body>
 
-  <!-- ======================= الشريط العلوي ======================= -->
   <div class="topbar">
-    <div class="title">Uber Albalad</div>
+    Uber Albalad
     <button id="openAdminBtn" class="adminBtn">المشرفين</button>
   </div>
 
-  <!-- ======================= المحتوى ======================= -->
   <div class="wrap">
 
     <!-- الطلبات -->
@@ -150,59 +160,56 @@
     <!-- لوحة المشرف -->
     <div id="adminPanel" class="adminCard">
       <h3>لوحة المشرف</h3>
-      <div class="adminInfo" id="adminInfo"></div>
+      <div id="adminInfo"></div>
 
-      <div class="adminActions" id="adminActions" style="display:none">
-        <button class="btn btn-primary" id="btnAdd">إضافة طلب</button>
-        <button class="btn btn-secondary" id="btnReset">إعادة ضبط</button>
-        <button class="btn btn-danger" id="btnLogout">تسجيل خروج</button>
-        <div class="small">لا توجد معاملات مالية في هذه الصفحة.</div>
+      <div id="adminActions" style="display:none">
+        <button id="btnAdd" class="btn btn-primary">إضافة طلب</button>
+        <button id="btnReset" class="btn btn-secondary">إعادة ضبط</button>
+        <button id="btnLogout" class="btn btn-danger">تسجيل خروج</button>
       </div>
     </div>
 
   </div>
 
-  <!-- ======================= نافذة الإضافة ======================= -->
+  <!-- نافذة إضافة / تعديل -->
   <div id="modal" class="modal">
     <div class="modalBox">
       <h3 id="modalTitle">إضافة طلب</h3>
 
-      <div class="field">
-        <label>اسم الطلب</label>
-        <input id="inputTitle" type="text" />
-      </div>
+      <label>اسم الطلب</label>
+      <input id="inputTitle" type="text">
 
-      <div class="field">
-        <label>رفع صورة الطلب</label>
-        <input id="inputFile" type="file" accept="image/*" />
-      </div>
+      <label>رقم الديلفري</label>
+      <input id="inputDelivery" type="text" placeholder="اكتب رقم الديلفري">
 
-      <div style="text-align:left">
-        <button class="btn btn-secondary" onclick="closeModal()">إلغاء</button>
-        <button class="btn btn-primary" id="saveBtn">حفظ</button>
-      </div>
+      <label>صورة الطلب</label>
+      <input id="inputFile" type="file" accept="image/*">
+
+      <br><br>
+      <button class="btn btn-secondary" onclick="closeModal()">إلغاء</button>
+      <button id="saveBtn" class="btn btn-primary">حفظ</button>
     </div>
   </div>
 
 <script>
-/* ========= إعدادات ========= */
 const ADMIN_CODE = "010100";
 let isAdmin = sessionStorage.getItem("ua_isAdmin") === "1";
 
-/* DOM */
+let orders = JSON.parse(localStorage.getItem("ua_orders") || "[]");
+
 const adminPanel = document.getElementById("adminPanel");
 const adminInfo = document.getElementById("adminInfo");
 const adminActions = document.getElementById("adminActions");
 const openAdminBtn = document.getElementById("openAdminBtn");
 
-let orders = JSON.parse(localStorage.getItem("ua_orders") || "[]");
-
 const ordersListEl = document.getElementById("ordersList");
+
 const modal = document.getElementById("modal");
 const inputTitle = document.getElementById("inputTitle");
+const inputDelivery = document.getElementById("inputDelivery");
 const inputFile = document.getElementById("inputFile");
-const modalTitle = document.getElementById("modalTitle");
 const saveBtn = document.getElementById("saveBtn");
+
 const btnAdd = document.getElementById("btnAdd");
 const btnReset = document.getElementById("btnReset");
 const btnLogout = document.getElementById("btnLogout");
@@ -210,55 +217,56 @@ const btnLogout = document.getElementById("btnLogout");
 let editingIndex = -1;
 let tempImageData = "";
 
-/* ========= تحديث واجهة المشرف ========= */
+/* تحديث واجهة المشرف */
 function updateAdminUI(){
   if(isAdmin){
     adminPanel.classList.add("active");
-    adminInfo.innerText = "مرحباً أيها المشرف — يمكنك إدارة الطلبات الآن";
+    adminInfo.innerText = "يمكنك الآن إدارة الطلبات";
     adminActions.style.display = "flex";
     openAdminBtn.innerText = "المشرف";
   } else {
     adminPanel.classList.remove("active");
-    adminInfo.innerText = "اضغط على زر المشرفين وأدخل الكود للوصول إلى لوحة التحكم";
+    adminInfo.innerText = "اضغط على زر المشرفين للدخول بلوحة التحكم";
     adminActions.style.display = "none";
     openAdminBtn.innerText = "المشرفين";
   }
 }
 
-/* ========= عرض الطلبات ========= */
+/* عرض الطلبات */
 function renderOrders(){
   ordersListEl.innerHTML = "";
   if(orders.length === 0){
-    ordersListEl.innerHTML = `<div class="emptyNotice">لا توجد طلبات حالياً</div>`;
+    ordersListEl.innerHTML = `<div style="text-align:center;color:#777;padding:40px">لا توجد طلبات حالياً</div>`;
     return;
   }
 
-  orders.forEach((o, i)=>{
+  orders.forEach((o,i)=>{
     ordersListEl.innerHTML += `
       <div class="orderCard">
-        <img src="${o.image}" />
+        <img src="${o.image}">
         <div class="orderMeta">
           <h4>${o.title}</h4>
           <p>رقم الديلفري: <b>${o.delivery}</b></p>
         </div>
-        <div class="orderActions">
-          ${isAdmin ? `
-            <button class="btn btn-secondary" onclick="openEdit(${i})">تعديل</button>
-            <button class="btn btn-danger" onclick="deleteOrder(${i})">حذف</button>
-          ` : ""}
+
+        ${isAdmin ? `
+        <div>
+          <button class="btn btn-secondary" onclick="openEdit(${i})">تعديل</button>
+          <button class="btn btn-danger" onclick="deleteOrder(${i})">حذف</button>
         </div>
+        `: ""}
       </div>
     `;
   });
 }
 
-/* ========= دخول المشرف ========= */
+/* دخول المشرف */
 openAdminBtn.onclick = ()=>{
   if(isAdmin){
     adminPanel.classList.toggle("active");
     return;
   }
-  const code = prompt("ادخل كود المشرف:");
+  let code = prompt("ادخل كود المشرف:");
   if(code === ADMIN_CODE){
     isAdmin = true;
     sessionStorage.setItem("ua_isAdmin","1");
@@ -269,27 +277,27 @@ openAdminBtn.onclick = ()=>{
   }
 };
 
-/* ========= تسجيل خروج ========= */
+/* تسجيل خروج */
 btnLogout.onclick = ()=>{
   if(!confirm("هل تريد تسجيل الخروج؟")) return;
   isAdmin = false;
   sessionStorage.removeItem("ua_isAdmin");
   updateAdminUI();
   renderOrders();
-  alert("تم تسجيل الخروج بنجاح");
 };
 
-/* ========= إضافة طلب ========= */
+/* إضافة طلب */
 btnAdd.onclick = ()=>{
   editingIndex = -1;
   tempImageData = "";
   inputTitle.value = "";
+  inputDelivery.value = "";
   inputFile.value = "";
   modalTitle.innerText = "إضافة طلب";
   openModal();
 };
 
-/* ========= رفع صورة ========= */
+/* رفع صورة */
 inputFile.onchange = e=>{
   const f = e.target.files[0];
   if(!f) return;
@@ -298,20 +306,20 @@ inputFile.onchange = e=>{
   reader.readAsDataURL(f);
 };
 
-/* ========= حفظ ========= */
+/* حفظ */
 saveBtn.onclick = ()=>{
   const title = inputTitle.value.trim();
+  const delivery = inputDelivery.value.trim();
+
   if(!title){ alert("اكتب اسم الطلب"); return; }
+  if(!delivery){ alert("اكتب رقم الديلفري"); return; }
 
   if(editingIndex >= 0){
-    if(tempImageData) orders[editingIndex].image = tempImageData;
     orders[editingIndex].title = title;
+    orders[editingIndex].delivery = delivery;
+    if(tempImageData) orders[editingIndex].image = tempImageData;
   } else {
-    orders.unshift({
-      title,
-      image: tempImageData || "",
-      delivery: generateDeliveryNumber()
-    });
+    orders.unshift({ title, delivery, image: tempImageData });
   }
 
   localStorage.setItem("ua_orders", JSON.stringify(orders));
@@ -319,17 +327,18 @@ saveBtn.onclick = ()=>{
   renderOrders();
 };
 
-/* ========= تعديل ========= */
+/* تعديل */
 function openEdit(i){
   editingIndex = i;
   const o = orders[i];
   modalTitle.innerText = "تعديل الطلب";
   inputTitle.value = o.title;
+  inputDelivery.value = o.delivery;
   tempImageData = o.image;
   openModal();
 }
 
-/* ========= حذف ========= */
+/* حذف */
 function deleteOrder(i){
   if(!confirm("حذف الطلب؟")) return;
   orders.splice(i,1);
@@ -337,15 +346,11 @@ function deleteOrder(i){
   renderOrders();
 }
 
-/* ========= أدوات ========= */
+/* نافذة */
 function openModal(){ modal.classList.add("show") }
 function closeModal(){ modal.classList.remove("show") }
 
-function generateDeliveryNumber(){
-  return Math.floor(100000 + Math.random()*900000);
-}
-
-/* ========= تحميل أولي ========= */
+/* بدء */
 updateAdminUI();
 renderOrders();
 </script>
