--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       gap:12px;
       margin-top:10px;
     }
+
     .orderCard{
       background:#fff;
       padding:12px;
@@ -76,13 +77,17 @@
       display:flex;
       gap:12px;
       border:1px solid #eee;
+      align-items:center;
     }
+
+    /* الصورة مكبرة بنسبة 70% */
     .orderCard img{
-      width:120px;
-      height:80px;
+      width:70%;
+      height:200px;
       object-fit:cover;
-      border-radius:8px;
+      border-radius:12px;
     }
+
     .orderMeta{
       flex:1;
     }
@@ -236,7 +241,8 @@ function updateAdminUI(){
 function renderOrders(){
   ordersListEl.innerHTML = "";
   if(orders.length === 0){
-    ordersListEl.innerHTML = `<div style="text-align:center;color:#777;padding:40px">لا توجد طلبات حالياً</div>`;
+    ordersListEl.innerHTML =
+      `<div style="text-align:center;color:#777;padding:40px">لا توجد طلبات حالياً</div>`;
     return;
   }
 
@@ -253,8 +259,7 @@ function renderOrders(){
         <div>
           <button class="btn btn-secondary" onclick="openEdit(${i})">تعديل</button>
           <button class="btn btn-danger" onclick="deleteOrder(${i})">حذف</button>
-        </div>
-        `: ""}
+        </div>` : ""}
       </div>
     `;
   });
