--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
       align-items:center;
     }
 
-    /* الصورة مكبرة بنسبة 70% */
+    /* الصورة رجعت لحجمها الطبيعي */
     .orderCard img{
-      width:70%;
-      height:200px;
+      width:120px;
+      height:80px;
       object-fit:cover;
-      border-radius:12px;
+      border-radius:8px;
     }
 
     .orderMeta{
